CW3-Compiler/src/parser.output
Terminals unused in grammar

   T_NEWLINE
   T_MODULO
   T_QUESTIONM
   T_COLON
   T_LOG
   T_EXP
   T_SQRT
   T_RIGHT_OP
   T_LEFT_OP
   T_PTR_OP


Grammar

    0 $accept: ROOT $end

    1 ROOT: BASE

    2 BASE: FUNCTIONLIST
    3     | FUNCTIONLIST ALLSTATE
    4     | DECLARATIONLIST
    5     | FACTOR

    6 FUNCTIONLIST: DECLARATIONLIST FUNCTION
    7             | FUNCTION
    8             | FUNCTIONLIST FUNCTION
    9             | FUNCTIONLIST DECLARATIONLIST FUNCTION
   10             | FUNCTION T_SEMICOLON

   11 FUNCTION: TYPE T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   12         | TYPE T_VARIABLE T_LBRACKET T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   13         | TYPE T_VARIABLE T_LBRACKET T_RBRACKET T_LCURLY T_RCURLY
   14         | TYPE T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY T_RCURLY
   15         | TYPE T_VARIABLE T_LBRACKET T_RBRACKET
   16         | TYPE T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET

   17 PARAMLIST: PARAM
   18          | PARAMLIST T_COMMAR PARAM

   19 PARAM: TYPE T_VARIABLE

   20 ALLSTATE: DECLARATIONLIST STATEMENTLIST
   21         | STATEMENTLIST
   22         | DECLARATIONLIST

   23 STATEMENTLIST: STATEMENT
   24              | STATEMENT T_SEMICOLON
   25              | STATEMENTLIST STATEMENT
   26              | STATEMENTLIST STATEMENT T_SEMICOLON

   27 STATEMENT: T_VARIABLE ASSIGNMENT_OP EXPR
   28          | T_RETURN EXPR T_SEMICOLON
   29          | INCDEC T_VARIABLE
   30          | T_VARIABLE INCDEC
   31          | T_RETURN T_VARIABLE INCDEC T_SEMICOLON
   32          | T_RETURN INCDEC T_VARIABLE T_SEMICOLON
   33          | IFLOOP
   34          | WHILE
   35          | FORLOOP
   36          | T_RETURN T_NOT T_LBRACKET COMPARE T_RBRACKET T_SEMICOLON

   37 IFLOOP: T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   38       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY T_RCURLY
   39       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY T_ELSE T_LCURLY ALLSTATE T_RCURLY
   40       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY T_ELSE T_LCURLY T_RCURLY
   41       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY T_RCURLY T_ELSE T_LCURLY ALLSTATE T_RCURLY
   42       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY T_RCURLY T_ELSE T_LCURLY T_RCURLY
   43       | T_IF T_LBRACKET FACTOR T_RBRACKET T_LCURLY ALLSTATE T_RCURLY

   44 WHILE: T_WHILE T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   45      | T_WHILE T_LBRACKET COMPARE T_RBRACKET ALLSTATE T_RCURLY
   46      | T_WHILE T_LBRACKET FACTOR T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   47      | T_WHILE T_LBRACKET FACTOR T_RBRACKET T_LCURLY T_RCURLY

   48 FORLOOP: T_FOR T_LBRACKET DECLARATION COMPARE T_SEMICOLON STATEMENT T_RBRACKET T_LCURLY ALLSTATE T_RCURLY

   49 FUNCTIONCALL: T_VARIABLE T_LBRACKET ARGUMENTLIST T_RBRACKET
   50             | T_VARIABLE T_LBRACKET T_RBRACKET

   51 ARGUMENTLIST: ARGUMENT
   52             | ARGUMENTLIST T_COMMAR ARGUMENT

   53 ARGUMENT: T_VARIABLE
   54         | T_NUMBER

   55 DECLARATIONLIST: DECLARATION
   56                | DECLARATIONLIST DECLARATION

   57 DECLARATION: TYPE T_VARIABLE T_SEMICOLON
   58            | TYPE T_VARIABLE T_EQUAL EXPR T_SEMICOLON

   59 EXPR: TERM
   60     | EXPR T_PLUS TERM
   61     | EXPR T_MINUS TERM
   62     | FUNCTIONCALL

   63 TERM: TERM T_TIMES FACTOR
   64     | TERM T_DIVIDE FACTOR
   65     | FACTOR

   66 FACTOR: T_NUMBER
   67       | T_VARIABLE
   68       | T_LBRACKET EXPR T_RBRACKET
   69       | T_QUOTE T_VARIABLE T_QUOTE
   70       | T_QUOTE T_NUMBER T_QUOTE

   71 TYPE: T_NUMINT
   72     | T_CHAR

   73 COMPARE: COMPARETERM
   74        | COMPARE CON_OPANDOR COMPARETERM

   75 COMPARETERM: COMPARETERM COND_OP COMPARITORS
   76            | COMPARITORS

   77 COMPARITORS: EXPR COND_OP EXPR
   78            | T_LBRACKET COMPARE T_RBRACKET

   79 COND_OP: T_EQ_OP
   80        | T_NE_OP
   81        | T_GREATERTHAN
   82        | T_LESSTHAN
   83        | T_LE_OP
   84        | T_GE_OP

   85 CON_OPANDOR: T_AND_OP
   86            | T_OR_OP

   87 INCDEC: T_INC_OP
   88       | T_DEC_OP

   89 ASSIGNMENT_OP: T_EQUAL
   90              | T_MUL_ASSIGN
   91              | T_DIV_ASSIGN
   92              | T_MOD_ASSIGN
   93              | T_ADD_ASSIGN
   94              | T_SUB_ASSIGN
   95              | T_LEFT_ASSIGN
   96              | T_RIGHT_ASSIGN
   97              | T_AND_ASSIGN
   98              | T_XOR_ASSIGN
   99              | T_OR_ASSIGN


Terminals, with rules where they appear

$end (0) 0
error (256)
T_COMMAR (258) 18 52
T_NEWLINE (259)
T_RETURN (260) 28 31 32 36
T_MODULO (261)
T_GREATERTHAN (262) 81
T_LESSTHAN (263) 82
T_NOT (264) 36
T_WHILE (265) 44 45 46 47
T_ELSE (266) 39 40 41 42
T_FOR (267) 48
T_QUESTIONM (268)
T_COLON (269)
T_TIMES (270) 63
T_PLUS (271) 60
T_DIVIDE (272) 64
T_MINUS (273) 61
T_LBRACKET (274) 11 12 13 14 15 16 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 68 78
T_RBRACKET (275) 11 12 13 14 15 16 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 68 78
T_LOG (276)
T_EXP (277)
T_SQRT (278)
T_NUMBER (279) 54 66 70
T_VARIABLE (280) 11 12 13 14 15 16 19 27 29 30 31 32 49 50 53 57 58
    67 69
T_LCURLY (281) 11 12 13 14 37 38 39 40 41 42 43 44 46 47 48
T_RCURLY (282) 11 12 13 14 37 38 39 40 41 42 43 44 45 46 47 48
T_NUMINT (283) 71
T_SEMICOLON (284) 10 24 26 28 31 32 36 48 57 58
T_IF (285) 37 38 39 40 41 42 43
T_EQUAL (286) 58 89
T_MUL_ASSIGN (287) 90
T_DIV_ASSIGN (288) 91
T_MOD_ASSIGN (289) 92
T_ADD_ASSIGN (290) 93
T_SUB_ASSIGN (291) 94
T_LEFT_ASSIGN (292) 95
T_RIGHT_ASSIGN (293) 96
T_AND_ASSIGN (294) 97
T_XOR_ASSIGN (295) 98
T_OR_ASSIGN (296) 99
T_LE_OP (297) 83
T_GE_OP (298) 84
T_EQ_OP (299) 79
T_NE_OP (300) 80
T_RIGHT_OP (301)
T_LEFT_OP (302)
T_INC_OP (303) 87
T_DEC_OP (304) 88
T_PTR_OP (305)
T_AND_OP (306) 85
T_OR_OP (307) 86
T_CHAR (308) 72
T_QUOTE (309) 69 70


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
ROOT (56)
    on left: 1, on right: 0
BASE (57)
    on left: 2 3 4 5, on right: 1
FUNCTIONLIST (58)
    on left: 6 7 8 9 10, on right: 2 3 8 9
FUNCTION (59)
    on left: 11 12 13 14 15 16, on right: 6 7 8 9 10
PARAMLIST (60)
    on left: 17 18, on right: 11 14 16 18
PARAM (61)
    on left: 19, on right: 17 18
ALLSTATE (62)
    on left: 20 21 22, on right: 3 11 12 37 39 40 41 43 44 45 46 48
STATEMENTLIST (63)
    on left: 23 24 25 26, on right: 20 21 25 26
STATEMENT (64)
    on left: 27 28 29 30 31 32 33 34 35 36, on right: 23 24 25 26 48
IFLOOP (65)
    on left: 37 38 39 40 41 42 43, on right: 33
WHILE (66)
    on left: 44 45 46 47, on right: 34
FORLOOP (67)
    on left: 48, on right: 35
FUNCTIONCALL (68)
    on left: 49 50, on right: 62
ARGUMENTLIST (69)
    on left: 51 52, on right: 49 52
ARGUMENT (70)
    on left: 53 54, on right: 51 52
DECLARATIONLIST (71)
    on left: 55 56, on right: 4 6 9 20 22 56
DECLARATION (72)
    on left: 57 58, on right: 48 55 56
EXPR (73)
    on left: 59 60 61 62, on right: 27 28 58 60 61 68 77
TERM (74)
    on left: 63 64 65, on right: 59 60 61 63 64
FACTOR (75)
    on left: 66 67 68 69 70, on right: 5 43 46 47 63 64 65
TYPE (76)
    on left: 71 72, on right: 11 12 13 14 15 16 19 57 58
COMPARE (77)
    on left: 73 74, on right: 36 37 38 39 40 41 42 44 45 48 74 78
COMPARETERM (78)
    on left: 75 76, on right: 73 74 75
COMPARITORS (79)
    on left: 77 78, on right: 75 76
COND_OP (80)
    on left: 79 80 81 82 83 84, on right: 75 77
CON_OPANDOR (81)
    on left: 85 86, on right: 74
INCDEC (82)
    on left: 87 88, on right: 29 30 31 32
ASSIGNMENT_OP (83)
    on left: 89 90 91 92 93 94 95 96 97 98 99, on right: 27


State 0

    0 $accept: . ROOT $end

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_NUMINT    shift, and go to state 4
    T_CHAR      shift, and go to state 5
    T_QUOTE     shift, and go to state 6

    ROOT             go to state 7
    BASE             go to state 8
    FUNCTIONLIST     go to state 9
    FUNCTION         go to state 10
    DECLARATIONLIST  go to state 11
    DECLARATION      go to state 12
    FACTOR           go to state 13
    TYPE             go to state 14


State 1

   68 FACTOR: T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 15
    T_QUOTE     shift, and go to state 6

    FUNCTIONCALL  go to state 16
    EXPR          go to state 17
    TERM          go to state 18
    FACTOR        go to state 19


State 2

   66 FACTOR: T_NUMBER .

    $default  reduce using rule 66 (FACTOR)


State 3

   67 FACTOR: T_VARIABLE .

    $default  reduce using rule 67 (FACTOR)


State 4

   71 TYPE: T_NUMINT .

    $default  reduce using rule 71 (TYPE)


State 5

   72 TYPE: T_CHAR .

    $default  reduce using rule 72 (TYPE)


State 6

   69 FACTOR: T_QUOTE . T_VARIABLE T_QUOTE
   70       | T_QUOTE . T_NUMBER T_QUOTE

    T_NUMBER    shift, and go to state 20
    T_VARIABLE  shift, and go to state 21


State 7

    0 $accept: ROOT . $end

    $end  shift, and go to state 22


State 8

    1 ROOT: BASE .

    $default  reduce using rule 1 (ROOT)


State 9

    2 BASE: FUNCTIONLIST .
    3     | FUNCTIONLIST . ALLSTATE
    8 FUNCTIONLIST: FUNCTIONLIST . FUNCTION
    9             | FUNCTIONLIST . DECLARATIONLIST FUNCTION

    T_RETURN    shift, and go to state 23
    T_WHILE     shift, and go to state 24
    T_FOR       shift, and go to state 25
    T_VARIABLE  shift, and go to state 26
    T_NUMINT    shift, and go to state 4
    T_IF        shift, and go to state 27
    T_INC_OP    shift, and go to state 28
    T_DEC_OP    shift, and go to state 29
    T_CHAR      shift, and go to state 5

    $default  reduce using rule 2 (BASE)

    FUNCTION         go to state 30
    ALLSTATE         go to state 31
    STATEMENTLIST    go to state 32
    STATEMENT        go to state 33
    IFLOOP           go to state 34
    WHILE            go to state 35
    FORLOOP          go to state 36
    DECLARATIONLIST  go to state 37
    DECLARATION      go to state 12
    TYPE             go to state 14
    INCDEC           go to state 38


State 10

    7 FUNCTIONLIST: FUNCTION .
   10             | FUNCTION . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 39

    $default  reduce using rule 7 (FUNCTIONLIST)


State 11

    4 BASE: DECLARATIONLIST .
    6 FUNCTIONLIST: DECLARATIONLIST . FUNCTION
   56 DECLARATIONLIST: DECLARATIONLIST . DECLARATION

    T_NUMINT  shift, and go to state 4
    T_CHAR    shift, and go to state 5

    $default  reduce using rule 4 (BASE)

    FUNCTION     go to state 40
    DECLARATION  go to state 41
    TYPE         go to state 14


State 12

   55 DECLARATIONLIST: DECLARATION .

    $default  reduce using rule 55 (DECLARATIONLIST)


State 13

    5 BASE: FACTOR .

    $default  reduce using rule 5 (BASE)


State 14

   11 FUNCTION: TYPE . T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   12         | TYPE . T_VARIABLE T_LBRACKET T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   13         | TYPE . T_VARIABLE T_LBRACKET T_RBRACKET T_LCURLY T_RCURLY
   14         | TYPE . T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY T_RCURLY
   15         | TYPE . T_VARIABLE T_LBRACKET T_RBRACKET
   16         | TYPE . T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET
   57 DECLARATION: TYPE . T_VARIABLE T_SEMICOLON
   58            | TYPE . T_VARIABLE T_EQUAL EXPR T_SEMICOLON

    T_VARIABLE  shift, and go to state 42


State 15

   49 FUNCTIONCALL: T_VARIABLE . T_LBRACKET ARGUMENTLIST T_RBRACKET
   50             | T_VARIABLE . T_LBRACKET T_RBRACKET
   67 FACTOR: T_VARIABLE .

    T_LBRACKET  shift, and go to state 43

    $default  reduce using rule 67 (FACTOR)


State 16

   62 EXPR: FUNCTIONCALL .

    $default  reduce using rule 62 (EXPR)


State 17

   60 EXPR: EXPR . T_PLUS TERM
   61     | EXPR . T_MINUS TERM
   68 FACTOR: T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 44
    T_MINUS     shift, and go to state 45
    T_RBRACKET  shift, and go to state 46


State 18

   59 EXPR: TERM .
   63 TERM: TERM . T_TIMES FACTOR
   64     | TERM . T_DIVIDE FACTOR

    T_TIMES   shift, and go to state 47
    T_DIVIDE  shift, and go to state 48

    $default  reduce using rule 59 (EXPR)


State 19

   65 TERM: FACTOR .

    $default  reduce using rule 65 (TERM)


State 20

   70 FACTOR: T_QUOTE T_NUMBER . T_QUOTE

    T_QUOTE  shift, and go to state 49


State 21

   69 FACTOR: T_QUOTE T_VARIABLE . T_QUOTE

    T_QUOTE  shift, and go to state 50


State 22

    0 $accept: ROOT $end .

    $default  accept


State 23

   28 STATEMENT: T_RETURN . EXPR T_SEMICOLON
   31          | T_RETURN . T_VARIABLE INCDEC T_SEMICOLON
   32          | T_RETURN . INCDEC T_VARIABLE T_SEMICOLON
   36          | T_RETURN . T_NOT T_LBRACKET COMPARE T_RBRACKET T_SEMICOLON

    T_NOT       shift, and go to state 51
    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 52
    T_INC_OP    shift, and go to state 28
    T_DEC_OP    shift, and go to state 29
    T_QUOTE     shift, and go to state 6

    FUNCTIONCALL  go to state 16
    EXPR          go to state 53
    TERM          go to state 18
    FACTOR        go to state 19
    INCDEC        go to state 54


State 24

   44 WHILE: T_WHILE . T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   45      | T_WHILE . T_LBRACKET COMPARE T_RBRACKET ALLSTATE T_RCURLY
   46      | T_WHILE . T_LBRACKET FACTOR T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   47      | T_WHILE . T_LBRACKET FACTOR T_RBRACKET T_LCURLY T_RCURLY

    T_LBRACKET  shift, and go to state 55


State 25

   48 FORLOOP: T_FOR . T_LBRACKET DECLARATION COMPARE T_SEMICOLON STATEMENT T_RBRACKET T_LCURLY ALLSTATE T_RCURLY

    T_LBRACKET  shift, and go to state 56


State 26

   27 STATEMENT: T_VARIABLE . ASSIGNMENT_OP EXPR
   30          | T_VARIABLE . INCDEC

    T_EQUAL         shift, and go to state 57
    T_MUL_ASSIGN    shift, and go to state 58
    T_DIV_ASSIGN    shift, and go to state 59
    T_MOD_ASSIGN    shift, and go to state 60
    T_ADD_ASSIGN    shift, and go to state 61
    T_SUB_ASSIGN    shift, and go to state 62
    T_LEFT_ASSIGN   shift, and go to state 63
    T_RIGHT_ASSIGN  shift, and go to state 64
    T_AND_ASSIGN    shift, and go to state 65
    T_XOR_ASSIGN    shift, and go to state 66
    T_OR_ASSIGN     shift, and go to state 67
    T_INC_OP        shift, and go to state 28
    T_DEC_OP        shift, and go to state 29

    INCDEC         go to state 68
    ASSIGNMENT_OP  go to state 69


State 27

   37 IFLOOP: T_IF . T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   38       | T_IF . T_LBRACKET COMPARE T_RBRACKET T_LCURLY T_RCURLY
   39       | T_IF . T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY T_ELSE T_LCURLY ALLSTATE T_RCURLY
   40       | T_IF . T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY T_ELSE T_LCURLY T_RCURLY
   41       | T_IF . T_LBRACKET COMPARE T_RBRACKET T_LCURLY T_RCURLY T_ELSE T_LCURLY ALLSTATE T_RCURLY
   42       | T_IF . T_LBRACKET COMPARE T_RBRACKET T_LCURLY T_RCURLY T_ELSE T_LCURLY T_RCURLY
   43       | T_IF . T_LBRACKET FACTOR T_RBRACKET T_LCURLY ALLSTATE T_RCURLY

    T_LBRACKET  shift, and go to state 70


State 28

   87 INCDEC: T_INC_OP .

    $default  reduce using rule 87 (INCDEC)


State 29

   88 INCDEC: T_DEC_OP .

    $default  reduce using rule 88 (INCDEC)


State 30

    8 FUNCTIONLIST: FUNCTIONLIST FUNCTION .

    $default  reduce using rule 8 (FUNCTIONLIST)


State 31

    3 BASE: FUNCTIONLIST ALLSTATE .

    $default  reduce using rule 3 (BASE)


State 32

   21 ALLSTATE: STATEMENTLIST .
   25 STATEMENTLIST: STATEMENTLIST . STATEMENT
   26              | STATEMENTLIST . STATEMENT T_SEMICOLON

    T_RETURN    shift, and go to state 23
    T_WHILE     shift, and go to state 24
    T_FOR       shift, and go to state 25
    T_VARIABLE  shift, and go to state 26
    T_IF        shift, and go to state 27
    T_INC_OP    shift, and go to state 28
    T_DEC_OP    shift, and go to state 29

    $default  reduce using rule 21 (ALLSTATE)

    STATEMENT  go to state 71
    IFLOOP     go to state 34
    WHILE      go to state 35
    FORLOOP    go to state 36
    INCDEC     go to state 38


State 33

   23 STATEMENTLIST: STATEMENT .
   24              | STATEMENT . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 72

    $default  reduce using rule 23 (STATEMENTLIST)


State 34

   33 STATEMENT: IFLOOP .

    $default  reduce using rule 33 (STATEMENT)


State 35

   34 STATEMENT: WHILE .

    $default  reduce using rule 34 (STATEMENT)


State 36

   35 STATEMENT: FORLOOP .

    $default  reduce using rule 35 (STATEMENT)


State 37

    9 FUNCTIONLIST: FUNCTIONLIST DECLARATIONLIST . FUNCTION
   20 ALLSTATE: DECLARATIONLIST . STATEMENTLIST
   22         | DECLARATIONLIST .
   56 DECLARATIONLIST: DECLARATIONLIST . DECLARATION

    T_RETURN    shift, and go to state 23
    T_WHILE     shift, and go to state 24
    T_FOR       shift, and go to state 25
    T_VARIABLE  shift, and go to state 26
    T_NUMINT    shift, and go to state 4
    T_IF        shift, and go to state 27
    T_INC_OP    shift, and go to state 28
    T_DEC_OP    shift, and go to state 29
    T_CHAR      shift, and go to state 5

    $default  reduce using rule 22 (ALLSTATE)

    FUNCTION       go to state 73
    STATEMENTLIST  go to state 74
    STATEMENT      go to state 33
    IFLOOP         go to state 34
    WHILE          go to state 35
    FORLOOP        go to state 36
    DECLARATION    go to state 41
    TYPE           go to state 14
    INCDEC         go to state 38


State 38

   29 STATEMENT: INCDEC . T_VARIABLE

    T_VARIABLE  shift, and go to state 75


State 39

   10 FUNCTIONLIST: FUNCTION T_SEMICOLON .

    $default  reduce using rule 10 (FUNCTIONLIST)


State 40

    6 FUNCTIONLIST: DECLARATIONLIST FUNCTION .

    $default  reduce using rule 6 (FUNCTIONLIST)


State 41

   56 DECLARATIONLIST: DECLARATIONLIST DECLARATION .

    $default  reduce using rule 56 (DECLARATIONLIST)


State 42

   11 FUNCTION: TYPE T_VARIABLE . T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   12         | TYPE T_VARIABLE . T_LBRACKET T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   13         | TYPE T_VARIABLE . T_LBRACKET T_RBRACKET T_LCURLY T_RCURLY
   14         | TYPE T_VARIABLE . T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY T_RCURLY
   15         | TYPE T_VARIABLE . T_LBRACKET T_RBRACKET
   16         | TYPE T_VARIABLE . T_LBRACKET PARAMLIST T_RBRACKET
   57 DECLARATION: TYPE T_VARIABLE . T_SEMICOLON
   58            | TYPE T_VARIABLE . T_EQUAL EXPR T_SEMICOLON

    T_LBRACKET   shift, and go to state 76
    T_SEMICOLON  shift, and go to state 77
    T_EQUAL      shift, and go to state 78


State 43

   49 FUNCTIONCALL: T_VARIABLE T_LBRACKET . ARGUMENTLIST T_RBRACKET
   50             | T_VARIABLE T_LBRACKET . T_RBRACKET

    T_RBRACKET  shift, and go to state 79
    T_NUMBER    shift, and go to state 80
    T_VARIABLE  shift, and go to state 81

    ARGUMENTLIST  go to state 82
    ARGUMENT      go to state 83


State 44

   60 EXPR: EXPR T_PLUS . TERM

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_QUOTE     shift, and go to state 6

    TERM    go to state 84
    FACTOR  go to state 19


State 45

   61 EXPR: EXPR T_MINUS . TERM

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_QUOTE     shift, and go to state 6

    TERM    go to state 85
    FACTOR  go to state 19


State 46

   68 FACTOR: T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 68 (FACTOR)


State 47

   63 TERM: TERM T_TIMES . FACTOR

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_QUOTE     shift, and go to state 6

    FACTOR  go to state 86


State 48

   64 TERM: TERM T_DIVIDE . FACTOR

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_QUOTE     shift, and go to state 6

    FACTOR  go to state 87


State 49

   70 FACTOR: T_QUOTE T_NUMBER T_QUOTE .

    $default  reduce using rule 70 (FACTOR)


State 50

   69 FACTOR: T_QUOTE T_VARIABLE T_QUOTE .

    $default  reduce using rule 69 (FACTOR)


State 51

   36 STATEMENT: T_RETURN T_NOT . T_LBRACKET COMPARE T_RBRACKET T_SEMICOLON

    T_LBRACKET  shift, and go to state 88


State 52

   31 STATEMENT: T_RETURN T_VARIABLE . INCDEC T_SEMICOLON
   49 FUNCTIONCALL: T_VARIABLE . T_LBRACKET ARGUMENTLIST T_RBRACKET
   50             | T_VARIABLE . T_LBRACKET T_RBRACKET
   67 FACTOR: T_VARIABLE .

    T_LBRACKET  shift, and go to state 43
    T_INC_OP    shift, and go to state 28
    T_DEC_OP    shift, and go to state 29

    $default  reduce using rule 67 (FACTOR)

    INCDEC  go to state 89


State 53

   28 STATEMENT: T_RETURN EXPR . T_SEMICOLON
   60 EXPR: EXPR . T_PLUS TERM
   61     | EXPR . T_MINUS TERM

    T_PLUS       shift, and go to state 44
    T_MINUS      shift, and go to state 45
    T_SEMICOLON  shift, and go to state 90


State 54

   32 STATEMENT: T_RETURN INCDEC . T_VARIABLE T_SEMICOLON

    T_VARIABLE  shift, and go to state 91


State 55

   44 WHILE: T_WHILE T_LBRACKET . COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   45      | T_WHILE T_LBRACKET . COMPARE T_RBRACKET ALLSTATE T_RCURLY
   46      | T_WHILE T_LBRACKET . FACTOR T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   47      | T_WHILE T_LBRACKET . FACTOR T_RBRACKET T_LCURLY T_RCURLY

    T_LBRACKET  shift, and go to state 92
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 15
    T_QUOTE     shift, and go to state 6

    FUNCTIONCALL  go to state 16
    EXPR          go to state 93
    TERM          go to state 18
    FACTOR        go to state 94
    COMPARE       go to state 95
    COMPARETERM   go to state 96
    COMPARITORS   go to state 97


State 56

   48 FORLOOP: T_FOR T_LBRACKET . DECLARATION COMPARE T_SEMICOLON STATEMENT T_RBRACKET T_LCURLY ALLSTATE T_RCURLY

    T_NUMINT  shift, and go to state 4
    T_CHAR    shift, and go to state 5

    DECLARATION  go to state 98
    TYPE         go to state 99


State 57

   89 ASSIGNMENT_OP: T_EQUAL .

    $default  reduce using rule 89 (ASSIGNMENT_OP)


State 58

   90 ASSIGNMENT_OP: T_MUL_ASSIGN .

    $default  reduce using rule 90 (ASSIGNMENT_OP)


State 59

   91 ASSIGNMENT_OP: T_DIV_ASSIGN .

    $default  reduce using rule 91 (ASSIGNMENT_OP)


State 60

   92 ASSIGNMENT_OP: T_MOD_ASSIGN .

    $default  reduce using rule 92 (ASSIGNMENT_OP)


State 61

   93 ASSIGNMENT_OP: T_ADD_ASSIGN .

    $default  reduce using rule 93 (ASSIGNMENT_OP)


State 62

   94 ASSIGNMENT_OP: T_SUB_ASSIGN .

    $default  reduce using rule 94 (ASSIGNMENT_OP)


State 63

   95 ASSIGNMENT_OP: T_LEFT_ASSIGN .

    $default  reduce using rule 95 (ASSIGNMENT_OP)


State 64

   96 ASSIGNMENT_OP: T_RIGHT_ASSIGN .

    $default  reduce using rule 96 (ASSIGNMENT_OP)


State 65

   97 ASSIGNMENT_OP: T_AND_ASSIGN .

    $default  reduce using rule 97 (ASSIGNMENT_OP)


State 66

   98 ASSIGNMENT_OP: T_XOR_ASSIGN .

    $default  reduce using rule 98 (ASSIGNMENT_OP)


State 67

   99 ASSIGNMENT_OP: T_OR_ASSIGN .

    $default  reduce using rule 99 (ASSIGNMENT_OP)


State 68

   30 STATEMENT: T_VARIABLE INCDEC .

    $default  reduce using rule 30 (STATEMENT)


State 69

   27 STATEMENT: T_VARIABLE ASSIGNMENT_OP . EXPR

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 15
    T_QUOTE     shift, and go to state 6

    FUNCTIONCALL  go to state 16
    EXPR          go to state 100
    TERM          go to state 18
    FACTOR        go to state 19


State 70

   37 IFLOOP: T_IF T_LBRACKET . COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   38       | T_IF T_LBRACKET . COMPARE T_RBRACKET T_LCURLY T_RCURLY
   39       | T_IF T_LBRACKET . COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY T_ELSE T_LCURLY ALLSTATE T_RCURLY
   40       | T_IF T_LBRACKET . COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY T_ELSE T_LCURLY T_RCURLY
   41       | T_IF T_LBRACKET . COMPARE T_RBRACKET T_LCURLY T_RCURLY T_ELSE T_LCURLY ALLSTATE T_RCURLY
   42       | T_IF T_LBRACKET . COMPARE T_RBRACKET T_LCURLY T_RCURLY T_ELSE T_LCURLY T_RCURLY
   43       | T_IF T_LBRACKET . FACTOR T_RBRACKET T_LCURLY ALLSTATE T_RCURLY

    T_LBRACKET  shift, and go to state 92
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 15
    T_QUOTE     shift, and go to state 6

    FUNCTIONCALL  go to state 16
    EXPR          go to state 93
    TERM          go to state 18
    FACTOR        go to state 101
    COMPARE       go to state 102
    COMPARETERM   go to state 96
    COMPARITORS   go to state 97


State 71

   25 STATEMENTLIST: STATEMENTLIST STATEMENT .
   26              | STATEMENTLIST STATEMENT . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 103

    $default  reduce using rule 25 (STATEMENTLIST)


State 72

   24 STATEMENTLIST: STATEMENT T_SEMICOLON .

    $default  reduce using rule 24 (STATEMENTLIST)


State 73

    9 FUNCTIONLIST: FUNCTIONLIST DECLARATIONLIST FUNCTION .

    $default  reduce using rule 9 (FUNCTIONLIST)


State 74

   20 ALLSTATE: DECLARATIONLIST STATEMENTLIST .
   25 STATEMENTLIST: STATEMENTLIST . STATEMENT
   26              | STATEMENTLIST . STATEMENT T_SEMICOLON

    T_RETURN    shift, and go to state 23
    T_WHILE     shift, and go to state 24
    T_FOR       shift, and go to state 25
    T_VARIABLE  shift, and go to state 26
    T_IF        shift, and go to state 27
    T_INC_OP    shift, and go to state 28
    T_DEC_OP    shift, and go to state 29

    $default  reduce using rule 20 (ALLSTATE)

    STATEMENT  go to state 71
    IFLOOP     go to state 34
    WHILE      go to state 35
    FORLOOP    go to state 36
    INCDEC     go to state 38


State 75
